@@ -507,6 +507,10 @@ public class XmlReader {
 			return children.size;
 		}
 
+		public Array<Element> getChildren () {
+			return children;
+		}
+
 		/** @throws GdxRuntimeException if the element has no children. */
 		public Element getChild (int index) {
 			if (children == null) throw new GdxRuntimeException("Element has no children: " + name);
@@ -536,6 +540,13 @@ public class XmlReader {
 
 		public void remove () {
 			parent.removeChild(this);
+		}
+
+		public void replaceChild (Element child, Element replacement) {
+			if (children == null) throw new GdxRuntimeException("Element has no children: " + name);
+			final int index = children.indexOf(child, true);
+			if (index == -1) throw new GdxRuntimeException("Element does not contain child: " + child);
+			children.set(index, replacement);
 		}
 
 		public Element getParent () {
